--- a/etc/spack/eagle/spack.yaml
+++ b/etc/spack/eagle/spack.yaml
@@ -8,15 +8,16 @@ spack:
     - cuda@10.2.89 %gcc@8.4.0
     - cuda@11.0.2 %gcc@8.4.0
     - matrix:
-        - [ cmake, mpi, m4, zlib, bzip2, libxml2, boost, superlu,
-            netlib-lapack, hdf5, netcdf-c, yaml-cpp, openfast,
-            "tioga",
-            "hypre",
-            "trilinos~cuda~wrapper",
-            "amr-wind~cuda",
-            "nalu-wind-utils",
-            "tioga-utils"
-            ]
+        - [ cmake, ninja-fortran, mpi, m4, zlib, bzip2, libxml2, boost, superlu,
+            netlib-lapack, hdf5, netcdf-c, yaml-cpp, openfast]
+        - [ '%gcc@8.4.0 ', '%intel@18.0.4 ' ]
+    - "trilinos %gcc@8.4.0 ~cuda~wrapper"
+    - "trilinos %intel@18.0.4 ~cuda~wrapper"
+    - "trilinos %gcc@8.4.0 +cuda+cuda_rdc+wrapper~shared cuda_arch=70 ^cuda@10.2.89"
+    - matrix:
+        - [ tioga, hypre, amr-wind, nalu-wind ]
+        - [ '%gcc@8.4.0 ~cuda', '%intel@18.0.4 ~cuda',
+            '%gcc@8.4.0 +cuda~shared cuda_arch=70 ^cuda@10.2.89' ]
+    - matrix:
+        - [ nalu-wind-utils, tioga-utils ]
         - [ '%gcc@8.4.0', '%intel@18.0.4' ]
-    - "trilinos+cuda+wrapper cuda_arch=70 ^cuda@10.2.89"
-    - "amr-wind+cuda cuda_arch=70 ^cuda@10.2.89"
