--- a/etc/spack/spack/spack.yaml
+++ b/etc/spack/spack/spack.yaml
@@ -1,12 +1,18 @@
 spack:
   view: false
+  packages:
+    all:
+      variants: +mpi+pic build_type=Release
   specs:
     - cmake
+    - ninja-fortran
     - mpi
     - m4
     - zlib
+    - bzip2
     - libxml2
     - boost
+    - netlib-lapack
     - superlu
     - hdf5
     - netcdf-c
